--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
       Hello world!, with HTML!
     </div>
     <!-- Exercise 02-1: Add two more divs for chat and inputbox -->
+    <div id="userlist2">
+      Hi Alliens
+    </div>
+    <div id="userlist3">
+      Hi Witches
+    </div>
+    
   </body>
 </html>
