--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
       Hello world!, with HTML!
     </div>
     <!-- Exercise 02-1: Add two more divs for chat and inputbox -->
+    <div>
+      Hi AIlliens
+    </div>
   </body>
 </html>
