--- a/HeadAchSat/public/index.html
+++ b/HeadAchSat/public/index.html
@@ -25,6 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ChatApp</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit">
+<style>     
+body {
+  font-family: "Kanit", sans-serif;
+  font-size: 60px;
+}
+</style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
